33-aws-eks-ecomm-3-istio/1-Traffic/ms-cart-query-vs.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: shopping-cart-query-service-shoppingportal-vs
  namespace: shoppingportal  
spec:
  gateways:
  - shoppingportal-gateway
  hosts:
   - "*"
  http:
  - match:
    - uri:
        prefix: /shopping-cart-query-service/
    route:
    - destination:
        host: shopping-cart-query-service.shoppingportal.svc.cluster.local
        port:
          number: 80
