33-aws-eks-ecomm-3-istio/1-Traffic/order-svc-vs.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: order-shoppingportal-vs
  namespace: shoppingportal  
spec:
  gateways:
  - shoppingportal-gateway
  hosts:
   - "*"
  http:
  - match:
    - uri:
        prefix: /order-service/
    route:
    - destination:
        host: order-service.shoppingportal.svc.cluster.local
        port:
          number: 80
