33-aws-eks-ecomm-3-istio/1-Traffic/payment-virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: payment-shoppingportal-vs
  namespace: shoppingportal  
spec:
  gateways:
  - shoppingportal-gateway
  hosts:
   - "*"
  http:
  - match:
    - uri:
        prefix: /payment-service/
    route:
    - destination:
        host: payment-service.shoppingportal.svc.cluster.local
        port:
          number: 80
