33-aws-eks-ecomm-3-istio/1-Traffic/product-review-svc-vs.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: productreview-shoppingportal-vs
  namespace: shoppingportal  
spec:
  gateways:
  - shoppingportal-gateway
  hosts:
   - "*"
  http:
  - match:
    - uri:
        prefix: /product-review-service/
    route:
    - destination:
        host: product-review-service.shoppingportal.svc.cluster.local
        port:
          number: 80
