33-aws-eks-ecomm-3-istio/1-Traffic/shoppingportal-destination-rules.yml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: shoppingportal-destination-rules
  namespace: shoppingportal    
spec:
  host: ms-sp-ui-svc.shoppingportal.svc.cluster.local
  subsets:
  - name: stable
    labels:
      version: v1
  - name: canary
    labels:
      version: v2
