33-aws-eks-ecomm-3-istio/1-Traffic/ui-svc-vs.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: ui-shoppingportal-vs
  namespace: shoppingportal  
spec:
  gateways:
  - shoppingportal-gateway
  hosts:
   - "*"
  http:
  - match:
    - uri:
        prefix: /ui
      headers:
        user-agent:
          regex: ".*Firefox.*"
    route:
    - destination:
        host: ms-sp-ui-svc.shoppingportal.svc.cluster.local
        subset: canary # match v2 only
        port:
          number: 80           
  - match:
    - uri:
        prefix: /ui
    route:
    - destination:
        host: ms-sp-ui-svc.shoppingportal.svc.cluster.local
        subset: stable # match v1 only
        port:
          number: 80
