33-aws-eks-ecomm-3-istio/1-Traffic/zipkin-vs.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: zipkin-service-shoppingportal-vs
  namespace: shoppingportal  
spec:
  gateways:
  - shoppingportal-gateway
  hosts:
   - "*"
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        host: zipkin-svc.shoppingportal.svc.cluster.local
        port:
          number: 80
